--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rinvex/laravel-attributes",
+    "name": "jennoramcaj/laravel-attributes",
     "description": "Rinvex Attributes is a robust, intelligent, and integrated Entity-Attribute-Value model (EAV) implementation for Laravel Eloquent, with powerful underlying for managing entity attributes implicitly as relations with ease. It utilizes the power of Laravel Eloquent, with smooth and seamless integration.",
     "type": "library",
     "keywords": [
@@ -21,16 +21,17 @@
     "license": "MIT",
     "homepage": "https://rinvex.com",
     "support": {
-        "email": "help@rinvex.com",
-        "issues": "https://github.com/rinvex/laravel-attributes/issues",
-        "source": "https://github.com/rinvex/laravel-attributes",
-        "docs": "https://github.com/rinvex/laravel-attributes/blob/master/README.md"
+        "email": "jenno@ramcaj.it"
     },
     "authors": [
         {
             "name": "Rinvex LLC",
             "homepage": "https://rinvex.com",
             "email": "help@rinvex.com"
+        },
+        {
+          "name": "Jenno Ramcaj",
+          "email": "jenno@ramcaj.it"
         },
         {
             "name": "Abdelrahman Omran",
@@ -49,19 +50,18 @@
     ],
     "require": {
         "php": "^8.0.0",
-        "illuminate/console": "^9.0.0 || ^10.0.0",
-        "illuminate/database": "^9.0.0 || ^10.0.0",
-        "illuminate/support": "^9.0.0 || ^10.0.0",
+        "illuminate/console": "^9.0.0",
+        "illuminate/database": "^9.0.0",
+        "illuminate/support": "^9.0.0",
         "jeremeamia/superclosure": "^2.4.0",
-        "rinvex/laravel-support": "^6.1.0",
+        "jennoramcaj/laravel-support": "^6.2.1",
         "spatie/eloquent-sortable": "^4.0.0",
         "spatie/laravel-sluggable": "^3.3.0",
         "spatie/laravel-translatable": "^5.2.0"
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.31.0",
-        "illuminate/container": "^9.0.0 || ^10.0.0",
-        "orchestra/testbench": "^7.0.0",
+        "illuminate/container": "^9.0.0",
         "phpunit/phpunit": "^9.5.0"
     },
     "autoload": {
